# cobs-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  fuzz.yml
benches/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  decode_differential.rs  roundtrip.rs  roundtrip_differential.rs
src/: lib.rs
