[package]
name = "darkbio-cobs"
version = "0.1.2"
authors = ["Péter Szilágyi <peter@dark.bio>"]
description = "Fast COBS encoder and decoder"
repository = "https://github.com/dark-bio/cobs-rs"
documentation = "https://docs.rs/darkbio-cobs"
categories = ["encoding"]
keywords = ["cobs"]
license = "BSD-3-Clause"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
thiserror = "2"

[dev-dependencies]
cobs = "0.5"
rand = "0.9"
sysinfo = "0.37"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.8"

[lib]
bench = false

[[bench]]
name = "main"
harness = false
